feat: Migrate to Vite and TypeScript
This commit introduces significant build system and tooling upgrades.

Key changes include:
- **Vite Integration**: Replaced the previous build setup with Vite for faster development builds and more efficient production bundling.
- **TypeScript Adoption**: Migrated the project to TypeScript, enhancing type safety and code maintainability.
- **Dependency Updates**: Updated dependencies to align with the new build system and TypeScript requirements.
- **Server Modernization**: Refactored `server.js` to use ES modules (`import`/`export`) for better compatibility with modern JavaScript practices.
- **Component Refactoring**: Updated `src/index.tsx` to correctly initialize React with the new Vite setup and `src/App.tsx` with initial state management and component structure.
- **Configuration Updates**: Adjusted `vite.config.ts` and `tsconfig.json` to reflect the new build and compilation settings.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
         text-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
       }
       
-      /* Restored Glass Button Styles */
       .glass-button {
         display: inline-flex;
         align-items: center;
@@ -166,20 +165,27 @@
         transform: rotate(10deg);
       }
     </style>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.23.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.10",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0"
   }
 }
 </script>
 </head>
   <body class="text-white">
     <div id="root"></div>
-    <script type="text/babel" data-type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
