refactor: Update AI service types and imports
Refactors the AI service to use a new `ChatContent` type for chat history, enhancing type safety and consistency. Also updates import paths for various modules in `index.html`.

--- a/index.html
+++ b/index.html
@@ -165,21 +165,21 @@
         transform: rotate(10deg);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "vite": "https://aistudiocdn.com/vite@^7.1.10",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "express": "https://aistudiocdn.com/express@^5.1.0",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0"
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0",
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "vite": "https://aistudiocdn.com/vite@^7.1.10",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4"
   }
 }
 </script>
