feat: Enhance AI description generation and error handling
This commit introduces several improvements to the AI functionality:

- **Improved Error Handling:** The AI API endpoint now logs specific error messages from the AI service and returns a 429 status for quota exceeded errors, providing better feedback to the user.
- **Frontend UI Updates:** Minor adjustments to the CSS for `.carousel-slide` and `select option` to ensure better visual consistency.
- **Refactored `fetchFromApi`:** The generic fetch function now forwards the raw `Response` object on error, allowing calling functions to inspect status codes and other response details.
- **AI Cooldown State:** Added a `CooldownState` to `AddEditMineralModal` to manage API cooldowns per image operation, preventing excessive calls.
- **API Error State:** Introduced an `apiError` state in `AddEditMineralModal` to display API-related errors to the user.
- **Gemini API Error Handling:** Simplified error handling within `gemini-api.js` by removing the explicit try-catch block, allowing errors to propagate upwards for more centralized management.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         z-index: -1;
         pointer-events: none;
         animation: subtlePulse 15s ease-in-out infinite alternate;
-        transition: background 1s ease-in-out;
+        transition: background 1s ease-in-out, opacity 1s ease-in-out;
       }
       strong, b {
         font-weight: 600;
@@ -149,32 +149,23 @@
         font-size: 0.75rem;
       }
       select option {
-        background: #050408;
+        background: #0c0513;
         color: white;
       }
       .carousel-slide {
         flex: 0 0 100%;
-        transition: transform 0.8s cubic-bezier(0.25, 1, 0.5, 1);
-        position: relative;
+        transition: transform 0.8s cubic-bezier(0.25, 1, 0.5, 1), opacity 0.8s ease-in-out;
+        position: absolute;
         opacity: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
       }
       .carousel-slide.active {
         transform: translateX(0);
         opacity: 1;
         z-index: 1;
-      }
-      .carousel-slide.prev {
-        transform: translateX(-100%);
-      }
-      .carousel-slide.next {
-        transform: translateX(100%);
-      }
-      .carousel-slider {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
       }
     </style>
 <script type="importmap">
