--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
     "body-parser": "https://aistudiocdn.com/body-parser@^2.2.0",
     "url": "https://aistudiocdn.com/url@^0.11.4",
     "vite": "https://aistudiocdn.com/vite@^7.1.10",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4"
   }
 }
 </script>
